--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="style.css" />
+
   <script src="script.js" defer></script>
 </head>
 
 <body>
   <main>
     <ul id="lista-de-frutas">
-      <li id="fruta-1"></li>
+      <li id="fruta-1" ></li>
       <li id="fruta-2"></li>
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    
   </main>
+  <label for="texto">Endereço</label>
+  <input type="text" id="texto" />
+  <button onclick="adicionar()">clique</button>
+
 </body>
 
 </html>
